tests/NormalTests/paczka1/small_fuzzy/77863258.err
Error in line 1: Vf3U8 S252 58,4
Error in line 4: RkD6K8WYox3 S416 80,52
Error in line 14: S252 S416 61,46
